--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "sass-loader": "^13.1.0",
     "vue": "^2.6.14",
     "vue-router": "^3.6.4",
+    "vue-socket.io": "^3.0.10",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
