--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "element-ui": "^2.15.10",
     "sass": "^1.56.1",
     "sass-loader": "^13.1.0",
+    "socket.io-client": "^4.5.3",
     "vue": "^2.6.14",
     "vue-router": "^3.6.4",
     "vue-socket.io": "^3.0.10",
