--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.1.3",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.10",
+    "moment": "^2.29.4",
     "sass": "^1.56.1",
     "sass-loader": "^13.1.0",
     "socket.io-client": "^2.3.0",
